--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,16 +7,17 @@ pipeline {
 
     stages {
 
-        stage('Checkout SCM') {
+        stage('Checkout from SCM') {
             steps {
-                checkout scm
+                git branch: 'main',
+                    url: 'https://github.com/syedvasiullah05-png/terraform'
             }
         }
 
         stage('Terraform Init') {
             steps {
                 sh '''
-                  terraform version
+                  terraform --version
                   terraform init
                 '''
             }
@@ -25,7 +26,7 @@ pipeline {
         stage('Terraform Plan') {
             steps {
                 sh '''
-                  terraform plan
+                  terraform plan -out=tfplan
                 '''
             }
         }
@@ -34,7 +35,7 @@ pipeline {
             steps {
                 input message: 'Approve Terraform Apply?', ok: 'Apply'
                 sh '''
-                  terraform apply -auto-approve
+                  terraform apply -auto-approve tfplan
                 '''
             }
         }
