Simplify Jenkins pipeline for Terraform

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,52 +1,30 @@
 pipeline {
     agent any
 
-    environment {
-        TF_IN_AUTOMATION = "true"
-    }
-
     stages {
 
-        stage('Checkout from SCM') {
+        stage('Checkout SCM') {
             steps {
-                git branch: 'main',
-                    url: 'https://github.com/syedvasiullah05-png/terraform.git'
+                checkout scm
             }
         }
 
         stage('Terraform Init') {
             steps {
-                sh '''
-                  terraform --version
-                  terraform init
-                '''
+                sh 'terraform init'
             }
         }
 
         stage('Terraform Plan') {
             steps {
-                sh '''
-                  terraform plan -out=tfplan
-                '''
+                sh 'terraform plan'
             }
         }
 
         stage('Terraform Apply') {
             steps {
-                input message: 'Approve Terraform Apply?', ok: 'Apply'
-                sh '''
-                  terraform apply -auto-approve tfplan
-                '''
+                sh 'terraform apply -auto-approve'
             }
-        }
-    }
-
-    post {
-        success {
-            echo 'Terraform pipeline executed successfully.'
-        }
-        failure {
-            echo 'Terraform pipeline failed.'
         }
     }
 }
