Refactor Jenkinsfile for Terraform stages

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,34 +1,33 @@
-pipeline{ 
-  agent any
-  tools {
-      terraform 'terraform'
-  }
-  environment {
-        GIT_URL = "https://github.com/syedvasiullah05-png/terraform.git" 
-        GIT_BRANCH = "main"
-    }
-stages {
-    stage('git-clone'){
-        steps {
-            git branch:"${GIT_BRANCH}",
-            url:"${GIT_URL}"
-        }
-    }
-    stage('terraform-init'){
-        steps {
-            sh 'terraform init'
-        }
-    }
-    stage('terraform-plan'){
-        steps {
-            sh 'terraform plan'
-        }
-    }
-    stage('terraform-apply'){
-        steps {
-            sh 'terraform apply -auto-approve'
-        }
-    }
-  }
-}
+pipeline {
+    agent any
 
+    tools {
+        terraform 'Terraform-test'
+    }
+
+    environment {
+        AWS_ACCESS_KEY_ID     = credentials('aws-creds')
+        AWS_SECRET_ACCESS_KEY = credentials('aws-creds')
+        AWS_DEFAULT_REGION    = 'us-east-1'
+    }
+
+    stages {
+        stage('Terraform Init') {
+            steps {
+                sh 'terraform init'
+            }
+        }
+
+        stage('Terraform Plan') {
+            steps {
+                sh 'terraform plan'
+            }
+        }
+
+        stage('Terraform Apply') {
+            steps {
+                sh 'terraform apply -auto-approve'
+            }
+        }
+    }
+}
